# differ

./: .env.example  .gitignore  Cargo.toml  LICENSE.txt  README.md  biome.json  components.json  index.html  node-options.txt  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
components/: ai-chat.tsx  app-sidebar.tsx  cmd-menu.tsx  code-editor.tsx  command.tsx  convex_provider.tsx  download-dialog.tsx  editor-panel.tsx  error-dialog.tsx  file-uploader.tsx  message-editor.tsx  message-reasoning.tsx  mode-toggle.tsx  multi-file-diff.tsx  nav-bar.tsx  navigation.tsx  pastebin-client.tsx  preview-attachment.tsx  preview-message.tsx  settings-dialog.tsx  settings-provider.tsx  sidebar-history-item.tsx  sidebar-history.tsx  spinner.tsx  tasks.tsx
components/ai-elements/: greeting.tsx  loader.tsx  message.tsx  prompt-input.tsx
components/ui/: command.tsx  dialog.tsx
convex/: fns.ts  http.ts  pastebin.ts  pastebin_client.ts  schema.ts
convex/_generated/: api.d.ts
hooks/: use-app-config.tsx  use-app-utils.tsx  use-browser-id.tsx  use-chat.tsx  use-codemirror.ts  use-convex-query.tsx  use-download.tsx  use-file-upload.ts  use-listen.tsx  use-messages.tsx  use-pastebin.tsx  use-screen-size.tsx  use-scroll-to-bottom.tsx  use-task.tsx
lib/: data.ts  llms.ts  types.ts  utils.ts  utils.tsx
lib/fns/: chats.ts  utils.ts
lib/ipc/: chats.ts  pastebin.ts  utils.ts
prototype/: Cargo.toml
prototype/src/: error.rs  main.rs
src/: App.tsx  diff.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260117133735_init.sql
src-tauri/src/: axum.rs  chats_cmd.rs  commands.rs  config.rs  constants.rs  convex.rs  convex_query.rs  db_chats.rs  db_config.rs  db_pastebin.rs  diff.rs  error.rs  ipc_chats.rs  ipc_convex.rs  ipc_pastebin.rs  ipc_utils.rs  lib.rs  main.rs  prelude.rs  utils.rs  utils_cmd.rs
src/routes/: __root.tsx  index.tsx  multi-file-diff.tsx  paste-bin.tsx
src/routes/chats/: $chatId.tsx  index.tsx  route.tsx
src/routes/pastebin/: $pasteId.tsx  index.tsx
