[workspace]
resolver = "2"

members = [
    "prototype",
    "src-tauri"
]

[workspace.dependencies]
convex = "*"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"
anyhow = "1.0.95"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
futures = "0.3.31"
uuid = { version = "1.16.0", features = ["v4"] }
diff = "0.1"
dotenvy = "0.15.7"
maplit = "1.0.2"
directories = "6.0.0"
aisdk = { version = "0.3.0", features = ["full", "axum"] }
axum = {version = "0.8.8", features = ["default", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
port-selector = "0.1.6"
chrono = "0.4.41"