[package]
name = "prototype"
version = "0.1.0"
edition = "2021"
default-run = "prototype"


[dependencies]
convex.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
futures.workspace = true
uuid.workspace = true
dotenvy.workspace = true
maplit.workspace = true
directories.workspace = true
aisdk.workspace = true
axum.workspace = true
tower-http.workspace = true
port-selector.workspace = true
reqwest.workspace = true
futures-util.workspace = true
webbrowser.workspace = true

# Temp
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

 