[package]
name = "differ"
version = "0.1.0"
description = "A Tauri App"
authors = ["emmanuelajike2000@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "differ_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# [dependencies]
# tauri = { version = "2", features = [] }
# tauri-plugin-opener = "2"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# thiserror = "2.0.11"
# anyhow = "1.0.95"
# sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
# futures = "0.3.31"
# uuid = { version = "1.16.0", features = ["v4"] }
# diff = "0.1"
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
futures.workspace = true
uuid.workspace = true
diff.workspace = true
