[package]
name = "differ"
version = "0.1.0"
description = "A Tauri App"
authors = ["emmanuelajike2000@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "differ_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
futures.workspace = true
uuid.workspace = true
dotenvy.workspace = true
tauri-plugin-dialog = "2"
convex.workspace = true
maplit.workspace = true
directories.workspace = true
aisdk.workspace = true
axum.workspace = true
tower-http.workspace = true
port-selector.workspace = true
chrono.workspace = true
reqwest.workspace = true
futures-util.workspace = true
webbrowser.workspace = true
tauri-plugin-process = "2"


# Opentelemetry
tonic.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-resource-detectors.workspace = true

